# jnesty

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/architecture/: SKILL.md
.claude/skills/debug-sampling/: SKILL.md
.claude/skills/develop-bound/: SKILL.md
.claude/skills/develop-sampler/: SKILL.md
.claude/skills/usage/: SKILL.md
.github/workflows/: docs.yml
dev/: CLAUDE.md  TECHNICAL_REFERENCE.md  develop_log.md  problems.md  prompt.md
dev/demo/: 01_comparison_report.md  01_multimodal_gaussian_mixture_dynesty.py  01_multimodal_gaussian_mixture_jnesty.py  02_comparison_report.md  02_rosenbrock_banana_dynesty.py  02_rosenbrock_banana_jnesty.py  03_comparison_report.md  03_highd_gaussian_dynesty.py  03_highd_gaussian_jnesty.py  04_comparison_report.md  04_gaussian_shells_dynesty.py  04_gaussian_shells_jnesty.py
dev/legacy/: api.py  constrained_sampler.py  while_loop_sampler.py
doc/: api.md  conf.py  examples.md  index.md  methods.md  requirements.txt
src/jnesty/: __init__.py  bounding.py  internal_samplers.py  jnesty.py  multi_ellipsoid.py  plotting.py  results.py  sampler.py  utils.py  whitening.py
tests/: conftest.py
tests/integration/: test_jnesty_api.py  test_queue_and_defaults.py  test_sampler.py
tests/unit/: test_bounding.py  test_internal_samplers.py  test_multi_ellipsoid.py  test_plotting.py  test_queue_mode.py  test_results.py  test_sampler_unit.py  test_utils.py
