[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jnesty"
version = "0.1.0"
description = "GPU-accelerated random walk nested sampling with JAX"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpy",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
dynesty = ["dynesty"]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests involving JAX JIT compilation or GPU (deselect with '-m \"not slow\"')",
]
addopts = "-m 'not slow' --tb=short -q"

[tool.setuptools.packages.find]
where = ["src"]
